--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@ckeditor/ckeditor5-angular": "^2.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^26.0.0",
     "@wellwind/ngx-thanos": "0.0.5",
     "@wellwind/thanos-snap": "0.0.5",
     "html2canvas": "^1.0.0-rc.7",
+    "ngx-export-as": "^1.5.0",
     "ramda": "^0.27.1",
-    "@ckeditor/ckeditor5-angular": "^2.0.1",
-    "@ckeditor/ckeditor5-build-classic": "^26.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
